// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom projectName 1`] = `
Object {
  "Parameters": Object {
    "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7ArtifactHashEE413C1D": Object {
      "Description": "Artifact hash for asset \\"e9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7\\"",
      "Type": "String",
    },
    "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7S3Bucket536F6534": Object {
      "Description": "S3 bucket for asset \\"e9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7\\"",
      "Type": "String",
    },
    "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7S3VersionKeyD5B92A7A": Object {
      "Description": "S3 key for asset version \\"e9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "PullRequestCheckCodeBuildResultFunctionAllowEventRulePullRequestCheckPullRequestProjectPullRequestValidationRuleF9D9EF4A9DED08EE": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckCodeBuildResultFunctionE246172A",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckPullRequestProjectPullRequestValidationRule16A1C1AC",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "PullRequestCheckCodeBuildResultFunctionE246172A": Object {
      "DependsOn": Array [
        "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2",
        "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7S3Bucket536F6534",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7S3VersionKeyD5B92A7A",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7S3VersionKeyD5B92A7A",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "POST_COMMENT": "TRUE",
            "UPDATE_APPROVAL_STATE": "TRUE",
          },
        },
        "Handler": "code_build_result.lambda_handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
            "Arn",
          ],
        },
        "Runtime": "python3.7",
      },
      "Type": "AWS::Lambda::Function",
    },
    "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "codecommit:PostCommentForPullRequest",
                "codecommit:UpdatePullRequestApprovalState",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheckPullRequestProjectEventsRoleDefaultPolicy949E41E9": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "PullRequestCheckPullRequestProjectF12CB57F",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckPullRequestProjectEventsRoleDefaultPolicy949E41E9",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckPullRequestProjectF12CB57F": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:4.0",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "Name": "custom-pr-project",
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckPullRequestProjectRole63741937",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": "buildspecs/prcheck.yml",
          "Location": Object {
            "Fn::GetAtt": Array [
              "Repository22E53BBD",
              "CloneUrlHttp",
            ],
          },
          "Type": "CODECOMMIT",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "PullRequestCheckPullRequestProjectPullRequestValidationRule16A1C1AC": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "project-name": Array [
              Object {
                "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckCodeBuildResultFunctionE246172A",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "PullRequestCheckPullRequestProjectRole63741937": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckPullRequestProjectRoleDefaultPolicyBB7DD656": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codecommit:GitPull",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codebuild:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":report-group/",
                    Object {
                      "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                    },
                    "-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckPullRequestProjectRoleDefaultPolicyBB7DD656",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckPullRequestProjectRole63741937",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "Repository22E53BBD": Object {
      "Properties": Object {
        "RepositoryDescription": "Some description.",
        "RepositoryName": "MyRepositoryName",
      },
      "Type": "AWS::CodeCommit::Repository",
    },
    "RepositoryPullRequestChangeRule71FDD004": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "event": Array [
              "pullRequestSourceBranchUpdated",
              "pullRequestCreated",
            ],
          },
          "detail-type": Array [
            "CodeCommit Pull Request State Change",
          ],
          "resources": Array [
            Object {
              "Fn::GetAtt": Array [
                "Repository22E53BBD",
                "Arn",
              ],
            },
          ],
          "source": Array [
            "aws.codecommit",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckPullRequestProjectF12CB57F",
                "Arn",
              ],
            },
            "Id": "Target0",
            "InputTransformer": Object {
              "InputPathsMap": Object {
                "detail-destinationCommit": "$.detail.destinationCommit",
                "detail-pullRequestId": "$.detail.pullRequestId",
                "detail-repositoryNames-0-": "$.detail.repositoryNames[0]",
                "detail-revisionId": "$.detail.revisionId",
                "detail-sourceCommit": "$.detail.sourceCommit",
              },
              "InputTemplate": "{\\"sourceVersion\\":<detail-sourceCommit>,\\"artifactsOverride\\":{\\"type\\":\\"NO_ARTIFACTS\\"},\\"environmentVariablesOverride\\":[{\\"name\\":\\"pullRequestId\\",\\"value\\":<detail-pullRequestId>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"repositoryName\\",\\"value\\":<detail-repositoryNames-0->,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"sourceCommit\\",\\"value\\":<detail-sourceCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"destinationCommit\\",\\"value\\":<detail-destinationCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"revisionId\\",\\"value\\":<detail-revisionId>,\\"type\\":\\"PLAINTEXT\\"}]}",
            },
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;

exports[`custom setup 1`] = `
Object {
  "Parameters": Object {
    "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7ArtifactHashEE413C1D": Object {
      "Description": "Artifact hash for asset \\"e9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7\\"",
      "Type": "String",
    },
    "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7S3Bucket536F6534": Object {
      "Description": "S3 bucket for asset \\"e9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7\\"",
      "Type": "String",
    },
    "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7S3VersionKeyD5B92A7A": Object {
      "Description": "S3 key for asset version \\"e9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "PullRequestCheckCodeBuildResultFunctionAllowEventRulePullRequestCheckPullRequestProjectPullRequestValidationRuleF9D9EF4A9DED08EE": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckCodeBuildResultFunctionE246172A",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckPullRequestProjectPullRequestValidationRule16A1C1AC",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "PullRequestCheckCodeBuildResultFunctionE246172A": Object {
      "DependsOn": Array [
        "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2",
        "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7S3Bucket536F6534",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7S3VersionKeyD5B92A7A",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7S3VersionKeyD5B92A7A",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "POST_COMMENT": "TRUE",
            "UPDATE_APPROVAL_STATE": "TRUE",
          },
        },
        "Handler": "code_build_result.lambda_handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
            "Arn",
          ],
        },
        "Runtime": "python3.7",
      },
      "Type": "AWS::Lambda::Function",
    },
    "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "codecommit:PostCommentForPullRequest",
                "codecommit:UpdatePullRequestApprovalState",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheckPullRequestProjectEventsRoleDefaultPolicy949E41E9": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "PullRequestCheckPullRequestProjectF12CB57F",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckPullRequestProjectEventsRoleDefaultPolicy949E41E9",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckPullRequestProjectF12CB57F": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_LARGE",
          "Image": "aws/codebuild/python:3.7.1",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "Name": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Name",
                ],
              },
              "-pull-request",
            ],
          ],
        },
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckPullRequestProjectRole63741937",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": "buildspecs/prcheck.yml",
          "Location": Object {
            "Fn::GetAtt": Array [
              "Repository22E53BBD",
              "CloneUrlHttp",
            ],
          },
          "Type": "CODECOMMIT",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "PullRequestCheckPullRequestProjectPullRequestValidationRule16A1C1AC": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "project-name": Array [
              Object {
                "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckCodeBuildResultFunctionE246172A",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "PullRequestCheckPullRequestProjectRole63741937": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckPullRequestProjectRoleDefaultPolicyBB7DD656": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codecommit:GitPull",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codebuild:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":report-group/",
                    Object {
                      "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                    },
                    "-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckPullRequestProjectRoleDefaultPolicyBB7DD656",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckPullRequestProjectRole63741937",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "Repository22E53BBD": Object {
      "Properties": Object {
        "RepositoryDescription": "Some description.",
        "RepositoryName": "MyRepositoryName",
      },
      "Type": "AWS::CodeCommit::Repository",
    },
    "RepositoryPullRequestChangeRule71FDD004": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "event": Array [
              "pullRequestSourceBranchUpdated",
              "pullRequestCreated",
            ],
          },
          "detail-type": Array [
            "CodeCommit Pull Request State Change",
          ],
          "resources": Array [
            Object {
              "Fn::GetAtt": Array [
                "Repository22E53BBD",
                "Arn",
              ],
            },
          ],
          "source": Array [
            "aws.codecommit",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckPullRequestProjectF12CB57F",
                "Arn",
              ],
            },
            "Id": "Target0",
            "InputTransformer": Object {
              "InputPathsMap": Object {
                "detail-destinationCommit": "$.detail.destinationCommit",
                "detail-pullRequestId": "$.detail.pullRequestId",
                "detail-repositoryNames-0-": "$.detail.repositoryNames[0]",
                "detail-revisionId": "$.detail.revisionId",
                "detail-sourceCommit": "$.detail.sourceCommit",
              },
              "InputTemplate": "{\\"sourceVersion\\":<detail-sourceCommit>,\\"artifactsOverride\\":{\\"type\\":\\"NO_ARTIFACTS\\"},\\"environmentVariablesOverride\\":[{\\"name\\":\\"pullRequestId\\",\\"value\\":<detail-pullRequestId>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"repositoryName\\",\\"value\\":<detail-repositoryNames-0->,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"sourceCommit\\",\\"value\\":<detail-sourceCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"destinationCommit\\",\\"value\\":<detail-destinationCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"revisionId\\",\\"value\\":<detail-revisionId>,\\"type\\":\\"PLAINTEXT\\"}]}",
            },
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;

exports[`default setup 1`] = `
Object {
  "Parameters": Object {
    "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7ArtifactHashEE413C1D": Object {
      "Description": "Artifact hash for asset \\"e9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7\\"",
      "Type": "String",
    },
    "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7S3Bucket536F6534": Object {
      "Description": "S3 bucket for asset \\"e9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7\\"",
      "Type": "String",
    },
    "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7S3VersionKeyD5B92A7A": Object {
      "Description": "S3 key for asset version \\"e9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "PullRequestCheckCodeBuildResultFunctionAllowEventRulePullRequestCheckPullRequestProjectPullRequestValidationRuleF9D9EF4A9DED08EE": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckCodeBuildResultFunctionE246172A",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckPullRequestProjectPullRequestValidationRule16A1C1AC",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "PullRequestCheckCodeBuildResultFunctionE246172A": Object {
      "DependsOn": Array [
        "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2",
        "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7S3Bucket536F6534",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7S3VersionKeyD5B92A7A",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7S3VersionKeyD5B92A7A",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "POST_COMMENT": "TRUE",
            "UPDATE_APPROVAL_STATE": "TRUE",
          },
        },
        "Handler": "code_build_result.lambda_handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
            "Arn",
          ],
        },
        "Runtime": "python3.7",
      },
      "Type": "AWS::Lambda::Function",
    },
    "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "codecommit:PostCommentForPullRequest",
                "codecommit:UpdatePullRequestApprovalState",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheckPullRequestProjectEventsRoleDefaultPolicy949E41E9": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "PullRequestCheckPullRequestProjectF12CB57F",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckPullRequestProjectEventsRoleDefaultPolicy949E41E9",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckPullRequestProjectF12CB57F": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:4.0",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "Name": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Name",
                ],
              },
              "-pull-request",
            ],
          ],
        },
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckPullRequestProjectRole63741937",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": "buildspecs/prcheck.yml",
          "Location": Object {
            "Fn::GetAtt": Array [
              "Repository22E53BBD",
              "CloneUrlHttp",
            ],
          },
          "Type": "CODECOMMIT",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "PullRequestCheckPullRequestProjectPullRequestValidationRule16A1C1AC": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "project-name": Array [
              Object {
                "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckCodeBuildResultFunctionE246172A",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "PullRequestCheckPullRequestProjectRole63741937": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckPullRequestProjectRoleDefaultPolicyBB7DD656": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codecommit:GitPull",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codebuild:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":report-group/",
                    Object {
                      "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                    },
                    "-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckPullRequestProjectRoleDefaultPolicyBB7DD656",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckPullRequestProjectRole63741937",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "Repository22E53BBD": Object {
      "Properties": Object {
        "RepositoryDescription": "Some description.",
        "RepositoryName": "MyRepositoryName",
      },
      "Type": "AWS::CodeCommit::Repository",
    },
    "RepositoryPullRequestChangeRule71FDD004": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "event": Array [
              "pullRequestSourceBranchUpdated",
              "pullRequestCreated",
            ],
          },
          "detail-type": Array [
            "CodeCommit Pull Request State Change",
          ],
          "resources": Array [
            Object {
              "Fn::GetAtt": Array [
                "Repository22E53BBD",
                "Arn",
              ],
            },
          ],
          "source": Array [
            "aws.codecommit",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckPullRequestProjectF12CB57F",
                "Arn",
              ],
            },
            "Id": "Target0",
            "InputTransformer": Object {
              "InputPathsMap": Object {
                "detail-destinationCommit": "$.detail.destinationCommit",
                "detail-pullRequestId": "$.detail.pullRequestId",
                "detail-repositoryNames-0-": "$.detail.repositoryNames[0]",
                "detail-revisionId": "$.detail.revisionId",
                "detail-sourceCommit": "$.detail.sourceCommit",
              },
              "InputTemplate": "{\\"sourceVersion\\":<detail-sourceCommit>,\\"artifactsOverride\\":{\\"type\\":\\"NO_ARTIFACTS\\"},\\"environmentVariablesOverride\\":[{\\"name\\":\\"pullRequestId\\",\\"value\\":<detail-pullRequestId>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"repositoryName\\",\\"value\\":<detail-repositoryNames-0->,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"sourceCommit\\",\\"value\\":<detail-sourceCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"destinationCommit\\",\\"value\\":<detail-destinationCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"revisionId\\",\\"value\\":<detail-revisionId>,\\"type\\":\\"PLAINTEXT\\"}]}",
            },
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;

exports[`privileged 1`] = `
Object {
  "Parameters": Object {
    "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7ArtifactHashEE413C1D": Object {
      "Description": "Artifact hash for asset \\"e9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7\\"",
      "Type": "String",
    },
    "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7S3Bucket536F6534": Object {
      "Description": "S3 bucket for asset \\"e9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7\\"",
      "Type": "String",
    },
    "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7S3VersionKeyD5B92A7A": Object {
      "Description": "S3 key for asset version \\"e9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "PullRequestCheckCodeBuildResultFunctionAllowEventRulePullRequestCheckPullRequestProjectPullRequestValidationRuleF9D9EF4A9DED08EE": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckCodeBuildResultFunctionE246172A",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckPullRequestProjectPullRequestValidationRule16A1C1AC",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "PullRequestCheckCodeBuildResultFunctionE246172A": Object {
      "DependsOn": Array [
        "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2",
        "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7S3Bucket536F6534",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7S3VersionKeyD5B92A7A",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameterse9e8a60ef00d3ba9d9ec7baa3288568ca65ff8f027bf684637b1bc8095dbacd7S3VersionKeyD5B92A7A",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "POST_COMMENT": "TRUE",
            "UPDATE_APPROVAL_STATE": "TRUE",
          },
        },
        "Handler": "code_build_result.lambda_handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
            "Arn",
          ],
        },
        "Runtime": "python3.7",
      },
      "Type": "AWS::Lambda::Function",
    },
    "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "codecommit:PostCommentForPullRequest",
                "codecommit:UpdatePullRequestApprovalState",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheckPullRequestProjectEventsRoleDefaultPolicy949E41E9": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "PullRequestCheckPullRequestProjectF12CB57F",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckPullRequestProjectEventsRoleDefaultPolicy949E41E9",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckPullRequestProjectF12CB57F": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:4.0",
          "PrivilegedMode": true,
          "Type": "LINUX_CONTAINER",
        },
        "Name": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Name",
                ],
              },
              "-pull-request",
            ],
          ],
        },
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckPullRequestProjectRole63741937",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": "buildspecs/prcheck.yml",
          "Location": Object {
            "Fn::GetAtt": Array [
              "Repository22E53BBD",
              "CloneUrlHttp",
            ],
          },
          "Type": "CODECOMMIT",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "PullRequestCheckPullRequestProjectPullRequestValidationRule16A1C1AC": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "project-name": Array [
              Object {
                "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckCodeBuildResultFunctionE246172A",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "PullRequestCheckPullRequestProjectRole63741937": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckPullRequestProjectRoleDefaultPolicyBB7DD656": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codecommit:GitPull",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codebuild:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":report-group/",
                    Object {
                      "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                    },
                    "-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckPullRequestProjectRoleDefaultPolicyBB7DD656",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckPullRequestProjectRole63741937",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "Repository22E53BBD": Object {
      "Properties": Object {
        "RepositoryDescription": "Some description.",
        "RepositoryName": "MyRepositoryName",
      },
      "Type": "AWS::CodeCommit::Repository",
    },
    "RepositoryPullRequestChangeRule71FDD004": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "event": Array [
              "pullRequestSourceBranchUpdated",
              "pullRequestCreated",
            ],
          },
          "detail-type": Array [
            "CodeCommit Pull Request State Change",
          ],
          "resources": Array [
            Object {
              "Fn::GetAtt": Array [
                "Repository22E53BBD",
                "Arn",
              ],
            },
          ],
          "source": Array [
            "aws.codecommit",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckPullRequestProjectF12CB57F",
                "Arn",
              ],
            },
            "Id": "Target0",
            "InputTransformer": Object {
              "InputPathsMap": Object {
                "detail-destinationCommit": "$.detail.destinationCommit",
                "detail-pullRequestId": "$.detail.pullRequestId",
                "detail-repositoryNames-0-": "$.detail.repositoryNames[0]",
                "detail-revisionId": "$.detail.revisionId",
                "detail-sourceCommit": "$.detail.sourceCommit",
              },
              "InputTemplate": "{\\"sourceVersion\\":<detail-sourceCommit>,\\"artifactsOverride\\":{\\"type\\":\\"NO_ARTIFACTS\\"},\\"environmentVariablesOverride\\":[{\\"name\\":\\"pullRequestId\\",\\"value\\":<detail-pullRequestId>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"repositoryName\\",\\"value\\":<detail-repositoryNames-0->,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"sourceCommit\\",\\"value\\":<detail-sourceCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"destinationCommit\\",\\"value\\":<detail-destinationCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"revisionId\\",\\"value\\":<detail-revisionId>,\\"type\\":\\"PLAINTEXT\\"}]}",
            },
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;
